--- a/FxPredictor/pom.xml
+++ b/FxPredictor/pom.xml
@@ -31,10 +31,10 @@
       <version>1.0.0-beta4</version>
   </dependency>
   <dependency>
-      <groupId>org.nd4j</groupId>
-      <artifactId>nd4j-native-platform</artifactId>
-      <version>1.0.0-beta4</version>
-  </dependency>
+ <groupId>org.nd4j</groupId>
+ <artifactId>nd4j-native</artifactId>
+ <version>1.0.0-beta4</version>
+</dependency>
   </dependencies>
 
   <build>
