--- a/FxPredictor/pom.xml
+++ b/FxPredictor/pom.xml
@@ -35,6 +35,11 @@
  <artifactId>nd4j-native</artifactId>
  <version>1.0.0-beta4</version>
 </dependency>
+<dependency>
+        <groupId>org.deeplearning4j</groupId>
+        <artifactId>deeplearning4j-ui_2.10</artifactId>
+        <version>1.0.0-beta4</version>
+    </dependency>
   </dependencies>
 
   <build>
